# Chubarov_Ilya

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  students.csv
src/: bank_analytics.py  decorators.py  external_api.py  fin_operations.py  generators.py  masks.py  processing.py  search_operations.py  utils.py  widget.py
tests/: conftest.py  test_bank_analytics.py  test_decorators.py  test_external_api.py  test_fin_operations.py  test_generators.py  test_masks.py  test_processing.py  test_search_operations.py  test_utils.py  test_widget.py
